# capstone_project_ai-bootcamp

./: Dockerfile  README.md  agents.py  context_overflow.py  docker_comand.md  evals.csv  helper_functions.py  main.py  pyproject.toml  requirements.txt  start_services.sh  tools.py
backend/: app.py
eval_logs/: summarize_20251215_113958_8b96e3.json  summarize_20251215_114131_75d692.json  summarize_20251215_114212_e01ffa.json  summarize_20251215_114730_226755.json
evals/: all_metrics.csv  evals.py  evaluator.py  questions_dataset.csv
evals/eval_logs/: orchestrator_20251217_171932_7fe2d6.json  orchestrator_20251217_172141_f4e012.json  orchestrator_20251217_172455_ea5bb2.json  orchestrator_20251217_172759_42d498.json  orchestrator_20251217_173314_69c5bd.json  orchestrator_20251218_085845_ced2ba.json  orchestrator_20251218_100830_f4b0a4.json  orchestrator_20251218_101033_4ef31b.json  orchestrator_20251218_101322_3fa486.json  orchestrator_20251218_101617_dc4040.json  orchestrator_20251218_121418_ab9dc1.json  orchestrator_20251218_122048_ad6bfd.json  orchestrator_20251218_122529_2ff8ff.json  orchestrator_20251218_122636_750c22.json  summarize_20251215_110543_442dea.json  summarize_20251215_114412_4f7a2a.json  summarize_20251215_114834_2c02b5.json
evals/eval_logs_/: summarize_20251215_110230_81d4b8.json  summarize_20251215_114455_480a9a.json
evals/latest_evals/: all_metrics.csv  evals.csv
logs/: summarize_20251215_151732_af8a7c.json
monitoring/: agent_logging.py
tests/: test_agent.py  test_llm_judge.py  utils.py
ui/: app.py
uv/: pyvenv.cfg
(+14 files in other folders)
