[project]
name = "capstone-project-ai-bootcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv2text>=0.1.14",
    "asyncio>=4.0.0",
    "elasticsearch>=9.2.0",
    "fastapi>=0.124.4",
    "feedparser>=6.0.12",
    "jaxn>=0.0.1",
    "jupyter>=1.1.1",
    "minsearch>=0.0.7",
    "openai>=2.11.0",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.32.0",
    "requests>=2.32.5",
    "streamlit>=1.52.1",
    "toyaikit>=0.0.8",
    "tqdm>=4.67.1",
    "uvicorn>=0.38.0",
]
