[project]
name = "capstone-project-ai-bootcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
     "arxiv2text",
     "elasticsearch>=9.2.0",
     "fastapi>=0.124.2",
     "feedparser>=6.0.12",
     "jaxn>=0.0.1",
     "jupyter>=1.1.1",
     "minsearch>=0.0.7",
     "mwparserfromhell>=0.7.2",
     "openai>=2.2.0",
     "openai-agents>=0.1.0",
     "pydantic-ai>=1.2.1",
     "pytest-asyncio>=1.3.0",
     "python-frontmatter>=1.1.0",
     "requests>=2.32.5",
     "streamlit>=1.52.1",
     "tiktoken>=0.12.0",
     "toyaikit>=0.0.4",
]

[tool.uv.sources]
arxiv2text = { git = "https://github.com/dsdanielpark/arxiv2text.git" }

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
]
